# causalgen

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tutorial.ipynb  tutorial.py
.github/workflows/: main.yml
causalgen/: __init__.py  generator.py  variables.py
datagen/: __init__.py  generator.py  sources.py  variables.py
test/: test_generation.py  test_nodes.py  test_operations.py  test_utils.py  testcase.py
